Update: término das funcionalidades de CRUD do usuário
